syntax = "proto3";

option go_package = "gitlab.node-3.net/nadams/zander/zproto";

import "google/protobuf/timestamp.proto";

package zproto;

service Zander {
  rpc ListServers(ListServersRequest) returns (ListServersResponse) {}
}

message ListServersRequest {}

message ListServersResponse {
  repeated Server servers = 1;
}

message Server {
  string id = 1;
  string name = 2;
  string status = 3;
  google.protobuf.Timestamp started_at = 4;
}
